[package]
name = "telegram_alarm_bot_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.15.0"
serde = "1.0.144"
serde_json = "1.0.85"
clap = { version = "3.2.21", features = ["derive"] }
